add a github icon to navbar

--- a/src/sass/_icons.scss
+++ b/src/sass/_icons.scss
@@ -75,6 +75,10 @@
 .icon-twitter:before {
 	content: '\f099';
 }
+/* '' */
+.icon-github:before {
+	content: '\f08e';
+}
 /* '' */
 .icon-facebook:before {
 	content: '\f09a';
