--- a/partials/navigation-meta.hbs
+++ b/partials/navigation-meta.hbs
@@ -1,4 +1,10 @@
 <ul class="nav-meta">
+  <li class="nav-github">
+    <a aria-label="Github" href="https://github.com/ryancwynar" title="RyanCwynar's Github" target="_blank">
+      <i class="icon icon-github" aria-hidden="true"></i>
+      <span>RyanCwynar's Github</span>
+    </a>
+  </li>
   {{#if @site.twitter}}
   <li class="nav-twitter">
     <a aria-label="Twitter" href="{{twitter_url}}" title="{{@site.twitter}}" target="_blank">
