add github logo via svg

--- a/partials/navigation-meta.hbs
+++ b/partials/navigation-meta.hbs
@@ -1,6 +1,7 @@
 <ul class="nav-meta">
   <li class="nav-github">
     <a aria-label="Github" href="https://github.com/ryancwynar" title="RyanCwynar's Github" target="_blank">
+      <img src="/assets/images/github-logo.svg" style="width: 1em; margin-right: .4em;"/>
       <i class="icon icon-github" aria-hidden="true"></i>
       <span>RyanCwynar's Github</span>
     </a>
