--- a/default.hbs
+++ b/default.hbs
@@ -12,6 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	{{!-- Styles'n'Scripts --}}
+	<link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" />
 	<link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
 
 	<script>
