--- a/index.hbs
+++ b/index.hbs
@@ -21,7 +21,7 @@
 	</div>
 </header>
 
-<div id="index" class="container">
+<div id="index" class="container mx-auto">
 
 	<main class="content" role="main">
 
